--- a/.github/workflows/brainstorm-deploy.yml
+++ b/.github/workflows/brainstorm-deploy.yml
@@ -3,7 +3,7 @@ name: Deploy WordPress
 on:
   push:
     branches:
-      - main
+      - main  # Adjust based on branch
 
 jobs:
   deploy:
@@ -13,11 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
+      - name: Add SSH Key
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
 
-      - name: Sync Files to Server
+      - name: Add server to SSH known_hosts
+        run: |
+          ssh-keyscan -H 13.200.83.50 >> ~/.ssh/known_hosts
+
+      - name: Sync files with rsync
         run: |
           rsync -avz --exclude '.git' . ubuntu@13.200.83.50:/var/www/html/wordpress
