--- a/.github/workflows/brainstorm-deploy.yml
+++ b/.github/workflows/brainstorm-deploy.yml
@@ -13,16 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Add SSH Key
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-
       - name: Add server to SSH known_hosts
         run: |
           ssh-keyscan -H 13.200.83.50 >> ~/.ssh/known_hosts
+
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_KEY }
 
       - name: Sync files with rsync
         run: |
