--- a/.github/workflows/brainstorm-deploy.yml
+++ b/.github/workflows/brainstorm-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.5.3
         with:
-          ssh-private-key: ${{ secrets.SSH_KEY }
+          ssh-private-key: ${{ secrets.SSH_KEY }}
 
       - name: Sync files with rsync
         run: |
