--- a/.github/workflows/brainstorm-deploy.yml
+++ b/.github/workflows/brainstorm-deploy.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Add server to SSH known_hosts
+      - name: Create SSH directory and Add server to known_hosts
         run: |
+          mkdir -p ~/.ssh
           ssh-keyscan -H 13.200.83.50 >> ~/.ssh/known_hosts
 
       - name: Set up SSH
